--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  font-family: "Saira", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 .heading-font-l {
   font-family: "Rowdies", sans-serif;
   font-weight: 300;
@@ -17,19 +22,19 @@
 }
 
 .font-two-l {
-  font-family: "Rowdies", sans-serif;
+  font-family: "Saira", sans-serif;
   font-weight: 300;
   font-style: normal;
 }
 
 .font-two-r {
-  font-family: "Rowdies", sans-serif;
+  font-family: "Saira", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
 .font-two-b {
-  font-family: "Rowdies", sans-serif;
+  font-family: "Saira", sans-serif;
   font-weight: 700;
   font-style: normal;
 }
