added some libraries

--- a/src/Component/Home/3rd/Thrd.css
+++ b/src/Component/Home/3rd/Thrd.css
@@ -1,7 +1,7 @@
 .Thrd {
 background: linear-gradient(to right, #084FC7 , #7F56D9);
 background-size: cover;
-height: 75vh;
+/* height: 75vh; */
 width: 100%;
 } 
 
