--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,20 @@
   font-weight: 700;
   font-style: normal;
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(105deg, #040F7C, #7F56D9);
+  border-radius: 20px;
+}
+
+  ::-webkit-scrollbar-thumb:hover {
+      background: linear-gradient(105deg, #040F7C, #7F56D9);
+  }
