--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -1,5 +1,15 @@
-.logo{
+.settingicon{
   display: none;
+  color: #962dff;
+  position: absolute;
+  top: 24px;
+  right: 0px;
+  left: 80%;
+  font-size: larger;
+  cursor: pointer;
+}
+.logo{
+  width: 120px;
 }
 #menu {
   height: 100vh;
@@ -89,7 +99,6 @@ main h1 {
     color: #FFFFFF;
   }
 
-
   @media screen and (max-width: 992px) {
     .menu-item {
       font-size: 11px;
@@ -146,15 +155,16 @@ main h1 {
       transition: all 0.5s ease;
       z-index: 10;
     }
-    .logo{
+    /* .settingicon{
       color: #962dff;
       display: flex;
       position: absolute;
       top: 24px;
-      left: 0px;
+      right: 0px;
+      left: 80%;
       font-size: larger;
       cursor: pointer;
-    }
+    } */
 
   }
   @media screen and (max-width: 576px) {
@@ -179,15 +189,16 @@ main h1 {
       text-decoration: none;
         color: black;
     }
-    .logo{
+    /* .settingicon{
       color: #962dff;
       display: flex;
       position: absolute;
       top: 24px;
-      left: 0px;
+      right: 0px;
+      left: 88%;
       font-size: larger;
       cursor: pointer;
-    }
+    } */
 
   }
   
