--- a/src/Component/Courses/courses.css
+++ b/src/Component/Courses/courses.css
@@ -1,24 +1,24 @@
-#courses {
+#courses-k {
     background-color: #f7faff;
 }
 
-#courses .container {
+#courses-k .container-k {
     width: 85%;
     margin: 0 auto;
     padding: 80px 0;
 }
 
-#courses h1 {
+#courses-k h1 {
     padding-bottom: 50px;
     font-weight: 800;
     text-align: center;
 }
 
-#courses .h1 {
+#courses-k .h1-k {
     color: #2aaa94;
 }
 
-#courses p {
+#courses-k p {
     color: #4e596b;
     padding-bottom: 50px;
     width: 500px;
@@ -26,7 +26,7 @@
     text-align: center;
 }
 
-#courses .btnCourse {
+#courses-k .btnCourse-k {
     background-image: linear-gradient(to right, #1341a1 0%, #4d4cbf 50%, #7855d5 100%);
     cursor: pointer;
     border: none;
@@ -36,27 +36,27 @@
     margin: 50px auto 0;
 }
 
-#courses .btnCourseDiv {
+#courses-k .btnCourseDiv-k {
     text-align: center;
 }
 
-#courses .courseCard {
+#courses-k .courseCard-k {
     width: 400px;
     background-color: white;
     border-radius: 10px;
 }
 
-#courses img {
+#courses-k img {
     width: 100%;
     border-radius: 10px 10px 0 0;
 }
 
-#courses .cardContent {
+#courses-k .cardContent-k {
     padding: 0 30px;
 }
 
-#courses .stu-time,
-#courses .price-buy {
+#courses-k .stu-time-k,
+#courses-k .price-buy-k {
     display: flex;
     justify-content: space-between;
     padding: 30px 0;
@@ -64,24 +64,24 @@
 }
 
 
-#courses .stu-time {
+#courses-k .stu-time-k {
     font-size: 14px;
 }
 
-#courses .price-buy {
+#courses-k .price-buy-k {
     font-weight: 800;
     font-size: 18px;
 }
 
-#courses .courseCards {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+#courses-k .courseCards-k {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     gap: 30px;
 }
 
-@media (max-width: 1400px) {
-    #courses .courseCards {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 30px;
+@media (max-width: 767.9px) {
+    #courses-k p {
+        width: auto;
     }
 }
