--- a/src/Component/ToDo/ToDo.css
+++ b/src/Component/ToDo/ToDo.css
@@ -1,25 +1,27 @@
-.cont{
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    /* justify-content: space-between; */
-    /* width: 100%; */
-    white-space: wrap;
-}
+
 .txt{
-    max-width: 210px;
-    
+    max-width: 50vw;
+    width: 100%;   
 }
 .mcont{
-    max-height: 300px;
+    max-height: 650px;
     overflow-y: auto;
 }
-.btn{
+.addtdbtn{
     color: #FFFFFF;
     background: linear-gradient(135deg, #040F7C, #7F56D9);
     /* transition: all 0.5s; */
 }
-.btn:hover{
+.addtdbtn:hover{
     color: #FFFFFF;
     background: linear-gradient(105deg, #040F7C, #7F56D9)
+}
+.tdbtn{
+    color: #FFFFFF;
+    background-color: #962dffb6;
+    border: none;
+}
+.tdbtn:hover:only-of-type{
+    color: #FFFFFF;
+    background-color: #962dffb6;
 }
