--- a/src/Component/lastpart/Children4.css
+++ b/src/Component/lastpart/Children4.css
@@ -9,3 +9,18 @@
   color: #1D1D45;
   margin-left: 20px;
 }
+
+.a-cards {
+  width: 300px !important;
+}
+
+@media (max-width: 767.9px) {
+  .a-div {
+    display: block !important;
+    text-align: center;
+  }
+  
+  .a-width {
+    width: auto !important;
+  }
+}
