--- a/src/Component/lastpart/Footer.css
+++ b/src/Component/lastpart/Footer.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: auto;
 }
+
 .underline ul li {
   text-decoration: none;
   list-style-type: none;
@@ -11,27 +12,37 @@
   font-size: 20px;
   margin-bottom: 5px;
 }
+
 .underline ul {
   padding: 0;
 }
-.line {
+
+.line-a {
   width: 100%;
   height: 1px;
   background-color: white;
 }
 
-.container {
+.container-a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 10px 20px 0;
 }
+
 .socialICON {
   width: 300px;
   height: 25px;
 }
+
 @media (max-width: 500px) {
-  .container {
+  .container-a {
     flex-direction: column;
   }
+}
+
+@media (max-width: 768px) {
+  .col-md-4 {
+    width: auto !important;
+}
 }
