--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
 * {
-  font-family: "Saira", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+p {
+  margin-bottom: 0 !important;
+}
+h3 {
+  margin-bottom: 0 !important;
+  line-height: 1.5 !important;
+  font-size: larger !important;
+}
+input {
+font-size: small !important;
 }
 
 .heading-font-l {
