--- a/src/Component/pro/Sidebar/Sidebar.css
+++ b/src/Component/pro/Sidebar/Sidebar.css
@@ -13,7 +13,7 @@
 }
 #menu {
   height: 100vh;
-  background-color: #FFFFFF;
+  /* background-color: #FFFFFF; */
   /* display: flex; */
   flex-direction: column;
   transition: all 0.5s ease;
@@ -53,7 +53,7 @@ bottom: 10px;
     color: black;
 }
 .menu-item:hover {
-  background-color: #962dffb6;
+  background-color: #7550d1;
   color: #FFFFFF;
 }
 .menu-item img {
@@ -95,7 +95,7 @@ main h1 {
     
 }
 .menu-item.active {
-    background-color: #962dffb6; 
+    background-color: #141888; 
     color: #FFFFFF;
   }
 
