--- a/src/Component/Quizzies/Quizzies.css
+++ b/src/Component/Quizzies/Quizzies.css
@@ -21,7 +21,7 @@ label.box-q {
     display: block;
     padding: 10px 20px;
     margin: 10px 0;
-    background-color: #6784a1;
+    background-color: #7550d1;
     border: 2px solid transparent;
     border-radius: 10px;
     cursor: pointer;
